--- a/index.html
+++ b/index.html
@@ -11,7 +11,31 @@
 	<div id="main-block">
 	  <div id="main-header-block">
       <img src="src/website-logo.png" />
+
+      <h1>nkr: My Website</h1>
+      <p>Created: 05.04.2022 - 23:41:38</p>
+      <p>Updated: 06.04.2022</p>
+
+      <ul id="main-header-menu-block">
+        <li><span>01.</span> <a href="#intro-block">Intro</a></li>
+        <li><span>02.</span> <a href="#social-networks-block">Social Networks</a></li>
+        <li><span>03.</span> <a>Projects</a></li>
+        <li><span>04.</span> <a>Blog</a></li>
+      </ul>
 	  </div>
+
+	  <div id="content-blocks">
+	    <div id="intro-block">
+        <h1>Intro</h1>
+        <div>Something about dle dwkejd</div>
+      </div>
+
+      <div id="social-networks-block">
+        <h1>Social Networks</h1>
+        <div>Something about dle dwkejd</div>
+      </div>
+	  </div>
+
 	</div>
 </body>
 </html>
