Update menu links & content block

--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
 	  <div id="content-blocks">
 	    <div id="intro-block">
         <h1>Intro</h1>
-        <div>Something about dle dwkejd</div>
+        <div>This is my website. My projects and links to my social networks are stored here. And also in the future it is planned to add my blog.</div>
       </div>
 
       <div id="social-networks-block">
         <h1>Social Networks</h1>
-        <div>Something about dle dwkejd</div>
+        <div>
+          <a href="https://www.instagram.com/nkr.413/?hl=ru">Instagram</a>
+          <a href="">Telegram</a>
+          <a href="https://github.com/nkr413">GitHub</a>
+        </div>
       </div>
 	  </div>
 
