--- a/index.html
+++ b/index.html
@@ -10,31 +10,37 @@
 <body>
 	<div id="main-block">
 	  <div id="main-header-block">
-      <img src="src/website-logo.png" />
 
-      <h1>nkr: My Website</h1>
-      <p>Created: 05.04.2022 - 23:41:38</p>
-      <p>Updated: 06.04.2022</p>
-
+      <div id="main-header">
+        <img src="src/website-logo.png" />
+        <div>
+          <h1>Hi</h1>
+          <p>Created: 05.04.2022 - 23:41:38</p>
+        </div>
+      </div>
+      
       <ul id="main-header-menu-block">
-        <li><span>01.</span> <a href="#intro-block">Intro</a></li>
+        <li><span>01.</span> <a href="#intro-block">About me</a></li>
         <li><span>02.</span> <a href="#social-networks-block">Social Networks</a></li>
-        <li><span>03.</span> <a>Projects</a></li>
-        <li><span>04.</span> <a>Blog</a></li>
+        <li style="text-decoration: line-through;"><span>03.</span> <a>Projects</a></li>
+        <li style="text-decoration: line-through;"><span>04.</span> <a>Blog</a></li>
       </ul>
 	  </div>
 
 	  <div id="content-blocks">
 	    <div id="intro-block">
-        <h1>Intro</h1>
-        <div>This is my website. My projects and links to my social networks are stored here. And also in the future it is planned to add my blog.</div>
+        <h1>About me</h1>
+        <div>This is my website. I'am js/python/rust developer based in Tashkent.
+          <br>langs: 🇷🇺/🇺🇿 native, 🇺🇸 b2.
+          <br><br>subscribe to my tg channel (ru): <a href="https://t.me/nkrdevblog">@nkrdevblog</a>
+        </div>
       </div>
 
       <div id="social-networks-block">
         <h1>Social Networks</h1>
         <div>
           <a href="https://www.instagram.com/nkr.413/?hl=ru">Instagram</a>
-          <a href="">Telegram</a>
+          <a href="https://t.me/nkr_dev">Telegram</a>
           <a href="https://github.com/nkr413">GitHub</a>
         </div>
       </div>
