--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 	  <div id="main-header-block">
 
       <div id="main-header">
-        <img src="src/website-logo.png" />
+        <img src="src/website-logo-2.png" />
         <div>
-          <h1>Hi</h1>
+          <h1>Hi, i am nkr</h1>
           <p>Created: 05.04.2022 - 23:41:38</p>
         </div>
       </div>
