--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	  <div id="main-header-block">
 
       <div id="main-header">
-        <img src="src/website-logo-2.png" />
+        <img src="src/website-logo.png" />
         <div>
           <h1>Hi, i am nkr</h1>
           <p>Created: 05.04.2022 - 23:41:38</p>
