updated files and fixed index.html

--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
       <div id="main-header">
         <img src="src/website-logo.png" />
         <div>
-          <h1>Hi, i am nkr</h1>
-          <p>Created: 05.04.2022 - 23:41:38</p>
+          <h1>Hi, i'm nkr</h1>
+          <p>Created: 05.04.2022 - 23:41</p>
         </div>
       </div>
       
       <ul id="main-header-menu-block">
         <li><span>01.</span> <a href="#intro-block">About me</a></li>
         <li><span>02.</span> <a href="#social-networks-block">Social Networks</a></li>
-        <li style="text-decoration: line-through;"><span>03.</span> <a>Projects</a></li>
-        <li style="text-decoration: line-through;"><span>04.</span> <a>Blog</a></li>
+        <li><span>03.</span> <a href="#doante-block">Donate me</a></li>
+        <li style="text-decoration: line-through;"><span>04.</span> <a>Projects</a></li>
+        <li style="text-decoration: line-through;"><span>05.</span> <a>Blog</a></li>
       </ul>
 	  </div>
 
 	  <div id="content-blocks">
 	    <div id="intro-block">
         <h1>About me</h1>
-        <div>This is my website. I'am js/python/rust developer based in Tashkent.
+        <div>This is my website. I'm js/python/rust developer based in Tashkent.
           <br>langs: 🇷🇺/🇺🇿 native, 🇺🇸 b2.
           <br><br>subscribe to my tg channel (ru): <a href="https://t.me/nkrdevblog">@nkrdevblog</a>
         </div>
