updated style.css and index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <ul id="main-header-menu-block">
         <li><span>01.</span> <a href="#intro-block">About me</a></li>
         <li><span>02.</span> <a href="#social-networks-block">Social Networks</a></li>
-        <li><span>03.</span> <a href="#doante-block">Donate me</a></li>
+        <li><span>03.</span> <a href="#donate-block">Donate me</a></li>
         <li style="text-decoration: line-through;"><span>04.</span> <a>Projects</a></li>
         <li style="text-decoration: line-through;"><span>05.</span> <a>Blog</a></li>
       </ul>
@@ -44,6 +44,19 @@
           <a href="https://t.me/nkr_dev">Telegram</a>
           <a href="https://github.com/nkr413">GitHub</a>
         </div>
+      </div>
+
+      <div id="donate-block">
+        <h1>Donate me</h1>
+
+        <div>i would be extremely pleased if you sent me some money :)</div><br>
+
+        <ul>
+          <li>BTC: bc1q7t5vqfsjs9mkwpt7jaq9lzy5gr52e7a68j49e8</li>
+          <li>ETH: 0x7Dd60dd3fb4434a290D6eAf193662e0F0297F2a4</li>
+          <li>SOL: 7LLwEFkvZ1U6Xyp9ibyATFha3XtgzB38qMUBpW2EAszC</li>
+          <li>TON: EQAl_4uuCkI-rXUvdgbrk8jUmBrWrtZsGvmR3XxuSLC_cnRn</li>
+        </ul>
       </div>
 	  </div>
 
