added main.js, added random profile photo, updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	  <div id="main-header-block">
 
       <div id="main-header">
-        <img src="src/website-logo.png" />
+        <img />
         <div>
           <h1>Hi, i'm nkr</h1>
           <p>Created: 05.04.2022 - 23:41</p>
@@ -52,14 +52,16 @@
         <div>i would be extremely pleased if you sent me some money :)</div><br>
 
         <ul>
-          <li>BTC: bc1q7t5vqfsjs9mkwpt7jaq9lzy5gr52e7a68j49e8</li>
-          <li>ETH: 0x7Dd60dd3fb4434a290D6eAf193662e0F0297F2a4</li>
-          <li>SOL: 7LLwEFkvZ1U6Xyp9ibyATFha3XtgzB38qMUBpW2EAszC</li>
-          <li>TON: EQAl_4uuCkI-rXUvdgbrk8jUmBrWrtZsGvmR3XxuSLC_cnRn</li>
+          <li>BTC: <span>bc1q7t5vqfsjs9mkwpt7jaq9lzy5gr52e7a68j49e8</span></li>
+          <li>ETH: <span>0x7Dd60dd3fb4434a290D6eAf193662e0F0297F2a4</span></li>
+          <li>SOL: <span>7LLwEFkvZ1U6Xyp9ibyATFha3XtgzB38qMUBpW2EAszC</span></li>
+          <li>TON: <span>EQAl_4uuCkI-rXUvdgbrk8jUmBrWrtZsGvmR3XxuSLC_cnRn</span></li>
         </ul>
       </div>
 	  </div>
 
 	</div>
+
+  <script src="main.js"></script>
 </body>
 </html>
