--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h1>About me</h1>
         <div>This is my website. I'm js/python/rust developer based in Tashkent.
           <br>langs: 🇷🇺/🇺🇿 native, 🇺🇸 b2.
-          <br><br>subscribe to my tg channel (ru): <a href="https://t.me/nkrdevblog">@nkrdevblog</a>
+          <br><br>subscribe to my tg channel (ru): <a href="https://t.me/+IHjIr5o63zIyYjk6">@nkrdevblog</a>
         </div>
       </div>
 
