--- a/index.html
+++ b/index.html
@@ -9,59 +9,60 @@
 </head>
 <body>
 	<div id="main-block">
-	  <div id="main-header-block">
+		<div id="main-header-block">
 
-      <div id="main-header">
-        <img />
-        <div>
-          <h1>Hi, i'm nkr</h1>
-          <p>Created: 05.04.2022 - 23:41</p>
-        </div>
-      </div>
-      
-      <ul id="main-header-menu-block">
-        <li><span>01.</span> <a href="#intro-block">About me</a></li>
-        <li><span>02.</span> <a href="#social-networks-block">Social Networks</a></li>
-        <li><span>03.</span> <a href="#donate-block">Donate me</a></li>
-        <li style="text-decoration: line-through;"><span>04.</span> <a>Projects</a></li>
-        <li style="text-decoration: line-through;"><span>05.</span> <a>Blog</a></li>
-      </ul>
-	  </div>
+			<div id="main-header">
+				<img />
+				<div>
+					<h1>Hi, i'm nkr</h1>
+					<p>Created: 05.04.2022 - 23:41</p>
+				</div>
+			</div>
+			
+			<ul id="main-header-menu-block">
+				<li><span>01.</span> <a href="#intro-block">About me</a></li>
+				<li><span>02.</span> <a href="#social-networks-block">Social Networks</a></li>
+				<li><span>03.</span> <a href="#donate-block">Donate me</a></li>
+				<li><span>04.</span> <a href="./projects/index.html">Projects</a></li>
+				<li style="text-decoration: line-through;"><span>05.</span> <a>Blog</a></li>
+			</ul>
+		</div>
 
-	  <div id="content-blocks">
-	    <div id="intro-block">
-        <h1>About me</h1>
-        <div>This is my website. I'm js/python/rust developer based in Tashkent.
-          <br>langs: 🇷🇺/🇺🇿 native, 🇺🇸 b2.
-          <br><br>subscribe to my tg channel (ru): <a href="https://t.me/+IHjIr5o63zIyYjk6">@nkrdevblog</a>
-        </div>
-      </div>
+		<div id="content-blocks">
+			<div id="intro-block">
+				<h1>About me</h1>
+				<div>This is my website. I'm js/python/rust developer based in Tashkent.
+					<br>langs: 🇷🇺/🇺🇿 native, 🇺🇸 b2.
+					<br><br>subscribe to my tg channel (ru): <a href="https://t.me/+IHjIr5o63zIyYjk6">open link</a>
+				</div>
+			</div>
 
-      <div id="social-networks-block">
-        <h1>Social Networks</h1>
-        <div>
-          <a href="https://www.instagram.com/nkr.413/?hl=ru">Instagram</a>
-          <a href="https://t.me/nkr_dev">Telegram</a>
-          <a href="https://github.com/nkr413">GitHub</a>
-        </div>
-      </div>
+			<div id="social-networks-block">
+				<h1>Social Networks</h1>
+				<div>
+					<a href="https://www.instagram.com/nkr.413/?hl=ru">Instagram</a>
+					<a href="https://t.me/nkr_dev">Telegram</a>
+					<a href="https://github.com/nkr413">GitHub</a>
+				</div>
+			</div>
 
-      <div id="donate-block">
-        <h1>Donate me</h1>
+			<div id="donate-block">
+				<h1>Donate me</h1>
 
-        <div>i would be extremely pleased if you sent me some money :)</div><br>
+				<div>i would be extremely pleased if you sent me some money :)</div><br>
 
-        <ul>
-          <li>BTC: <span>bc1q7t5vqfsjs9mkwpt7jaq9lzy5gr52e7a68j49e8</span></li>
-          <li>ETH: <span>0x7Dd60dd3fb4434a290D6eAf193662e0F0297F2a4</span></li>
-          <li>SOL: <span>7LLwEFkvZ1U6Xyp9ibyATFha3XtgzB38qMUBpW2EAszC</span></li>
-          <li>TON: <span>EQAl_4uuCkI-rXUvdgbrk8jUmBrWrtZsGvmR3XxuSLC_cnRn</span></li>
-        </ul>
-      </div>
-	  </div>
+				<ul>
+					<li>BTC: <span>bc1q7t5vqfsjs9mkwpt7jaq9lzy5gr52e7a68j49e8</span></li>
+					<li>ETH: <span>0x7Dd60dd3fb4434a290D6eAf193662e0F0297F2a4</span></li>
+					<li>SOL: <span>7LLwEFkvZ1U6Xyp9ibyATFha3XtgzB38qMUBpW2EAszC</span></li>
+					<li>TON: <span>EQAl_4uuCkI-rXUvdgbrk8jUmBrWrtZsGvmR3XxuSLC_cnRn</span></li>
+				</ul>
+			</div>
+
+		</div>
 
 	</div>
 
-  <script src="main.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
